Small Ui updates

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,7 +122,9 @@
   --shadow-xl: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 8px 10px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
   --shadow-2xl: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
 }
-
+section#offer{
+  background-color: var(--kaiju-cream);
+}
 @layer base {
   * {
     @apply border-border;
